--- a/style/style.css
+++ b/style/style.css
@@ -77,8 +77,6 @@ header img{
 }
 p{
     color: var(--p_color);
-}
-form > p:nth-child(2){
     margin-bottom: 25px;
 }
 .botones{
@@ -98,18 +96,15 @@ form > p:nth-child(2){
     cursor: pointer;
     transition: .5s all;
 }
-.boton:hover{
-    background: #1151a0;
-    color: #FFFFFF;
-}
 .botones input:nth-child(1){
     margin-bottom: 20px;
     background: var(--main_color);
     color: #FFFFFF;
 }
-.botones input:nth-child(1):hover{
-    background: #ffffff;
-    color: #1151a0;
+
+.mensaje > .boton{
+    width: 100%;
+    display: none;
 }
 @media (min-width: 780px){
     
@@ -128,6 +123,7 @@ form > p:nth-child(2){
         margin-right: 2%;
         margin-left: 14%;
     }
+    
     .entrada{
         font-size: 28px;
         margin-bottom: 10%;
@@ -148,6 +144,10 @@ form > p:nth-child(2){
    font-weight: 700;
    margin-bottom: 20px;
 }
+.salida{
+    font-size: 20px;
+    display: none;
+}
 @media (min-width: 1020px){
     .mensaje{
         width: 24%;
@@ -155,6 +155,7 @@ form > p:nth-child(2){
         display: flex;
         flex-wrap: wrap;
         align-content: center;
+        justify-content: center;
         margin: 0;
         margin-left: 1%;
         padding: 20px;
